# focg

./: .doxygen  .gitignore  .ocamlinit  Makefile  README.md  dune-project  focg.opam
inc/: focg.hpp
lib/: focg.ini
src/: dune  focg.cpp  focg.lex  focg.ml  focg.yacc
